Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17291

QFileDialog native dialog does not accept "standard" shortcuts on OSX

XMLWordPrintable

    • macOS
    • b5eb850e0deb61ff71e26a5a2d0e070b91306aa2 ecb25dac6894cf3e9169528d56adbe92eb1182b9
    • Bug Fixing Week Q2/2020

      [Regression from 5.3(?)]

      Standard shortcuts does not work on native QFileDialog

      When using NewFolder, GotoFolder (Cmd+Shift+G), the opened subdialog does not accept shortcuts : Cmd+C, Cmd+V, Ctrl+A, Ctrl+E, ...

      To reproduce :

      • compile the attached code
      • Cmd+O for File|Open
      • click NewFolder
      • copy a string to the clipboard (from a Terminal, TextEdit, ...)
      • try top paste it in the subdialog using Cmd+V ... it does not work
      • navigation on the lineedit does not accept Ctrl+A, Ctrl+E, ... either
      • using the context menu for pasting works
      • same thing for the goto folder command : Cmd+Shift+G does not accept Cmd+C, Cmd+V, Ctrl+A, Ctrl+E, ...

      The issue seems related/correlated to QTBUG-16943

        1. crash-11284.dmp.txt
          63 kB
          Dyami Caliri
        2. filedialog_copypaste.zip
          2 kB
          David Geldreich
        3. MainWindow.cpp-with-menuitems
          2 kB
          Shawn Rutledge
        4. with-paste-menuitem.tgz
          1 kB
          Shawn Rutledge
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.graphics.and.multimedia Qt Graphics Team
            r2d3 David Geldreich
            Votes:
            10 Vote for this issue
            Watchers:
            24 Start watching this issue

              Created:
              Updated:
              Resolved: